# Labelmachine

./: .gitignore  README.md  interview_tasks.md  labelmachine.cpp
F1simulation/: CMakeLists.txt  main.cpp
F1simulation/include/: laptimesim.h
F1simulation/src/: laptimelog.cpp  laptimesim.cpp  simulationstep.cpp
LabelMachine/: CMakeLists.txt  main.cpp
LabelMachine/include/: labelmachine.h
LabelMachine/src/: labelm_config.cpp  labelm_task.cpp  labelmachine.cpp
